--- a/public/main.scss
+++ b/public/main.scss
@@ -7,6 +7,21 @@
   padding: 2em;
 }
 
+// #title:hover {
+//   background-color: white;
+//   margin-left: 5em;
+//   width: 30em;
+// }
+
+h1 {
+  margin-left: 5em;
+  font-family: 'Indie Flower', cursive;
+}
+
+// h1:hover {
+//   margin-left: auto;
+// }
+
 #recommendations:hover {
   border: 2em rgb(197, 216, 240) solid;
 }
