--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title>Chicago Recommendations</title>
     <link rel="stylesheet" href="main.css">
+    <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <div id='title'><h1>Chicago Recommendations</h1></div>
     <%= yield %>
   </body>
 </html>
