working with a create form

--- a/views/read_recommendations.erb
+++ b/views/read_recommendations.erb
@@ -1,7 +1,8 @@
 <div id='recommendations'>
 
+
 <% @recs.each do |inc| %>
-<li><%= p inc.contributor + ' recommended ' + inc.place + '.' %></li>
+<li><%= inc.place %></li>
 <% end %>
 
 </div>
